# remote_objects

./: .gitignore  CMakeLists.txt  README  README.md
client/: CMakeLists.txt  main.cpp
client/objects/: object.hpp  photo_editor.cpp  photo_editor.hpp  stream.cpp  stream.hpp
client/transport/: client.cpp  client.hpp  context.cpp  context.hpp  message.cpp  message.hpp  transport.cpp  transport.hpp  transport_sync.cpp  transport_sync.hpp
client/utils/: util.cpp  util.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
server/client/: client.cpp  client.hpp
server/objects/: object.hpp  photo_editor.cpp  photo_editor.hpp  stream.cpp  stream.hpp
server/transport/: acceptor.cpp  acceptor.hpp  message.cpp  message.hpp  server.cpp  server.hpp  transport.cpp  transport.hpp
server/util/: avl_tree.cpp  avl_tree.hpp  util.cpp  util.hpp
